# Meta-WhatsApp

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: linters.yml
meta/: hooks.py  modules.txt  pdf_utils.py  tasks.py  whatsapp_utils.py
meta/config/: desktop.py  docs.py
meta/meta_integration/doctype/whatsapp_cloud_api_settings/: test_whatsapp_cloud_api_settings.py  whatsapp_cloud_api_settings.js  whatsapp_cloud_api_settings.json  whatsapp_cloud_api_settings.py
meta/meta_integration/doctype/whatsapp_message_template/: test_whatsapp_message_template.py  whatsapp_message_template.js  whatsapp_message_template.json  whatsapp_message_template.py
meta/meta_integration/doctype/whatsapp_message_template_item/: whatsapp_message_template_item.json  whatsapp_message_template_item.py
meta/public/js/: sales_invoice.js  sales_order.js  toolbar.js
