[project]
name = "meta"
authors = [
    { name = "Wahni IT Solutions", email = "info@wahni.com"}
]
description = "Cloud API Integration"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=14.0.0,<18.0.0"